fix the gap

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 
 .header {
     width: 40%;
-    height: 10vh;
+    height: 8vh;
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(23, 23, 191) 35%, rgba(0,212,255,1) 100%);
     border-radius: 20px;
     /* box-shadow: 6px 2px 2px rgb(0, 136, 255); */
@@ -32,7 +32,10 @@ body {
 
 .score {
   gap: 40px;
-  margin: 40px auto;
+  margin-top: 10px;
+  margin-bottom: 40px;
+  margin-left: auto;
+  margin-right: auto;
   display: flex;
   justify-content: center;
 }
